Refactorizacion de codigo, optimizando cosas y eliminado comentarios no relevantes