@@ -1,10 +1,7 @@
 package test;
 import static org.junit.jupiter.api.Assertions.*;
 import spiderweb.*;
-import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -15,7 +12,6 @@ import java.util.List;
  * @version 1.0 - 17/03/2024
  */
 public class SpiderWebContestTest{
-    
     @Test
     public void ShouldReturnTheRightSolutionOfTheProblem() {
         int[][] bridges = {{2,1},{4,3},{6,3},{8,7},{10,5}};
@@ -53,7 +49,7 @@ public class SpiderWebContestTest{
         int[][] bridges = {{2,1},{4,3},{6,3},{8,7},{10,5}};
         SpiderWebContest spiderwebcontest = new SpiderWebContest(7,6,bridges);
         int [] solution = {2,1,1,4,0,4,2};
-        assertNotEquals(Arrays.asList(spiderwebcontest.solve(7,6,bridges)), Arrays.asList(solution));
+        assertNotEquals(Collections.singletonList(spiderwebcontest.solve(7, 6, bridges)), List.of(solution));
     }
     
     @Test
@@ -61,7 +57,7 @@ public class SpiderWebContestTest{
         int[][] bridges = {{2,1},{4,3},{6,3},{8,7},{10,5}};
         SpiderWebContest spiderwebcontest = new SpiderWebContest(7,6,bridges);
         int [] solution = {1,1,0,2,2,1,0};
-        assertNotEquals(Arrays.asList(spiderwebcontest.solve(7,1,bridges)), Arrays.asList(solution));
+        assertNotEquals(Collections.singletonList(spiderwebcontest.solve(7, 1, bridges)), List.of(solution));
     }
     
     @Test
@@ -69,7 +65,7 @@ public class SpiderWebContestTest{
         int[][] bridges = {{1,1},{2,2},{3,3},{4,4}};
         SpiderWebContest spiderwebcontest = new SpiderWebContest(4,2,bridges);
         int [] solution = {0,0,0,1};
-        assertNotEquals(Arrays.asList(spiderwebcontest.solve(4,2,bridges)), Arrays.asList(solution));
+        assertNotEquals(Collections.singletonList(spiderwebcontest.solve(4, 2, bridges)), List.of(solution));
     }
     
     @Test
@@ -77,7 +73,7 @@ public class SpiderWebContestTest{
         int[][] bridges = {{5,5}};
         SpiderWebContest spiderwebcontest = new SpiderWebContest(5,1,bridges);
         int [] solution = {1,1,2,1,10000};
-        assertNotEquals(Arrays.asList(spiderwebcontest.solve(5,1,bridges)), Arrays.asList(solution));
+        assertNotEquals(Collections.singletonList(spiderwebcontest.solve(5, 1, bridges)), List.of(solution));
     }
     
     @Test
